--- a/templates/admin/bookings_overview.html.twig
+++ b/templates/admin/bookings_overview.html.twig
@@ -9,15 +9,15 @@
         <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
             <tr>
-                <th>#</th>
-                <th>User</th>
-                <th>E-Mail</th>
-                <th>Date</th>
-                <th>StartTime</th>
-                <th>EndTime</th>
-                <th>Floor</th>
-                <th>Room</th>
-                <th>Desk</th>
+                <th>{{ 'id_label'|trans }}</th>
+                <th>{{ 'user_label'|trans }}</th>
+                <th>{{ 'email_label'|trans }}</th>
+                <th>{{ 'date_label'|trans }}</th>
+                <th>{{ 'start_time_label'|trans }}</th>
+                <th>{{ 'end_time_label'|trans }}</th>
+                <th>{{ 'floor_label'|trans }}</th>
+                <th>{{ 'room_label'|trans }}</th>
+                <th>{{ 'desk_label'|trans }}</th>
             </tr>
             </thead>
             <tbody>
@@ -35,7 +35,7 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="9" class="text-center">No bookings found</td>
+                    <td colspan="9" class="text-center">{{ 'no_bookings_found'|trans }}</td>
                 </tr>
             {% endfor %}
             </tbody>
