--- a/templates/admin/create_user.html.twig
+++ b/templates/admin/create_user.html.twig
@@ -1,28 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create new user{% endblock %}
+{% block title %}{{ 'create_user_title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Create new user</h1>
+        <h1>{{ 'create_user_header'|trans }}</h1>
         {{ form_start(form) }}
         <div class="form-group">
-            {{ form_label(form.firstName) }}
+            {{ form_label(form.firstName, 'first_name_label'|trans) }}
             {{ form_widget(form.firstName, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.lastName) }}
+            {{ form_label(form.lastName, 'last_name_label'|trans) }}
             {{ form_widget(form.lastName, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.email) }}
+            {{ form_label(form.email, 'email_label'|trans) }}
             {{ form_widget(form.email, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.password) }}
+            {{ form_label(form.password,'password_label'|trans) }}
             {{ form_widget(form.password, { 'attr': { 'class': 'form-control' } }) }}
         </div>
-        <button class="btn btn-primary mt-3">Create</button>
+        <button class="btn btn-primary mt-3">{{ 'create_button'|trans }}</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
