--- a/templates/admin/edit_user.html.twig
+++ b/templates/admin/edit_user.html.twig
@@ -1,29 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit user{% endblock %}
+{% block title %}{{ 'edit_user_title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Edit user</h1>
+        <h1>{{ 'edit_user_header'|trans }}</h1>
         {{ form_start(form) }}
         <div class="form-group">
-            {{ form_label(form.firstName) }}
+            {{ form_label(form.firstName, 'first_name_label'|trans) }}
             {{ form_widget(form.firstName, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.lastName) }}
+            {{ form_label(form.lastName, 'last_name_label'|trans) }}
             {{ form_widget(form.lastName, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.email) }}
+            {{ form_label(form.email, 'email_label'|trans) }}
             {{ form_widget(form.email, { 'attr': { 'class': 'form-control' } }) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.password) }}
+            {{ form_label(form.password, 'password_label'|trans) }}
             {{ form_widget(form.password, { 'attr': { 'class': 'form-control' } }) }}
-            <small class="form-text text-muted">Leave the field empty to keep the password unchanged.</small>
+            <small class="form-text text-muted">{{ 'password_unchanged_hint'|trans }}</small>
         </div>
-        <button class="btn btn-primary mt-3">Save</button>
+        <button class="btn btn-primary mt-3">{{ 'save_button'|trans }}</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
