--- a/templates/admin/user_liste.html.twig
+++ b/templates/admin/user_liste.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User List{% endblock %}
+{% block title %}{{ 'user_list_title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>User List</h1>
+        <h1>{{ 'user_list_header'|trans }}</h1>
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>E-Mail</th>
-                <th>Aktionen</th>
+                <th>{{ 'id_label'|trans }}</th>
+                <th>{{ 'first_name_label'|trans }}</th>
+                <th>{{ 'last_name_label'|trans }}</th>
+                <th>{{ 'email_label'|trans }}</th>
+                <th>{{ 'actions_label'|trans }}</th>
             </tr>
             </thead>
             <tbody>
@@ -23,18 +23,18 @@
                     <td>{{ user.lastName }}</td>
                     <td>{{ user.email }}</td>
                     <td>
-                        <a href="{{ path('edit_user', { id: user.id }) }}" class="btn btn-warning btn-sm">Edit</a>
+                        <a href="{{ path('edit_user', { id: user.id }) }}" class="btn btn-warning btn-sm"> {{ 'edit_label'|trans }}</a>
                         <a href="{{ path('delete_user', { id: user.id }) }}" class="btn btn-danger btn-sm"
-                           onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
+                           onclick="return confirm('Are you sure you want to delete this user?');"> {{ 'delete_label'|trans }}</a>
                     </td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="5" class="text-center">No users found.</td>
+                    <td colspan="5" class="text-center">{{ 'no_users_found'|trans }}</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-        <a href="{{ path('create_user') }}" class="btn btn-success mt-3">Create new user</a>
+        <a href="{{ path('create_user') }}" class="btn btn-success mt-3">{{ 'create_new_user_label'|trans }}</a>
     </div>
 {% endblock %}
