--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Profile{% endblock %}
+{% block title %}{{ 'edit_profile_title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
@@ -15,14 +15,14 @@
             <div class="col-lg-8">
                 <div class="card shadow-lg">
                     <div class="alert alert-info text-center">
-                        <h2>Edit Profile</h2>
+                        <h2>{{ 'edit_profile_header'|trans }}</h2>
                     </div>
                     <div class="card-body">
                         <div class="text-center mb-4">
                             {% if user.photo %}
-                                <img src="{{ asset('uploads/photos/' ~ user.photo) }}" alt="Profile Picture" class="rounded-circle border border-primary" style="width: 150px; height: 150px; object-fit: cover;">
+                                <img src="{{ asset('uploads/photos/' ~ user.photo) }}" alt="{{ 'profile_picture'|trans }}" class="rounded-circle border border-primary" style="width: 150px; height: 150px; object-fit: cover;">
                             {% else %}
-                                <img src="{{ asset('uploads/photos/default-profile.png') }}" alt="Profile Picture" class="rounded-circle border border-secondary" style="width: 150px; height: 150px; object-fit: cover;">
+                                <img src="{{ asset('uploads/photos/default-profile.png') }}" alt="{{ 'profile_picture'|trans }}" class="rounded-circle border border-secondary" style="width: 150px; height: 150px; object-fit: cover;">
                             {% endif %}
                         </div>
 
@@ -31,13 +31,13 @@
 
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.firstName, 'First Name', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.firstName, 'first_name'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.firstName, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.firstName) }}
                             </div>
 
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.lastName, 'Last Name', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.lastName, 'last_name'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.lastName, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.lastName) }}
                             </div>
@@ -45,13 +45,13 @@
 
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.email, 'E-Mail', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.email, 'email'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.email, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.email) }}
                             </div>
 
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.phoneNumber, 'Phone Number', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.phoneNumber, 'phone_number'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.phoneNumber, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.phoneNumber) }}
                             </div>
@@ -59,13 +59,13 @@
 
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.position, 'Position', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.position, 'position'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.position, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.position) }}
                             </div>
 
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.photo, 'Upload Profile Picture', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.photo, 'upload_profile_picture'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.photo, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.photo) }}
                             </div>
@@ -73,20 +73,20 @@
 
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.password.first, 'New Password', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.password.first, 'new_password'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.password.first, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.password.first) }}
                             </div>
 
                             <div class="col-md-6 mb-3">
-                                {{ form_label(form.password.second, 'Confirm Password', { 'label_attr': { 'class': 'form-label' } }) }}
+                                {{ form_label(form.password.second, 'confirm_password'|trans, { 'label_attr': { 'class': 'form-label' } }) }}
                                 {{ form_widget(form.password.second, { 'attr': { 'class': 'form-control' } }) }}
                                 {{ form_errors(form.password.second) }}
                             </div>
                         </div>
 
                         <div class="text-center mt-4">
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="submit" class="btn btn-primary">{{ 'save'|trans }}</button>
                         </div>
 
                         {{ form_end(form) }}
